finished template - add css fixed header alignment, content1 button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,12 @@ body{
 /*HEADER*/
 .header{
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-items: center;
 	background: #1F2937;
 	color: white;
 	padding-top: 70px;
+	gap: 70px;
 }
 .logo{
 	font-size: 36px;
@@ -23,47 +24,46 @@ body{
 	padding: 15px;
 }
 
-/*MAIN*/
-/*
-.main{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-}
-*/
-
-
 /*CONTENT1*/
 .content1{
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-items: center;
 	background: #1f2937;
 	color: white;
 	padding-top: 50px;
 	padding-bottom: 50px;
+	gap: 20px;
 }
 .content1left{
 	max-width: 445px;
-	margin-left: 300px;
+	width: 400px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 .awesometitle{
-	text-align: center;
+	text-align: left;
 }
 .awesometext{
 	text-align: center;
 }
 .awesomebutton{
-	padding: 5px 50px;
-	margin-left: 150px;
-	margin-bottom: 10px;
+	color: white;
+	border-radius: 4px;
+	border-width: 0px;
+	border-color: white;
+	padding: 5px 15px;
+	margin-bottom: 15px;
+	margin-left: 15px;
+	background: #3b82f6;
+	font-weight: bold;
+	align-self: start; 
 }
 
 .content1right{
 	padding: 100px;
-	margin-left: 15px;
-	margin-right: 300px;
 	background: #6d747d; 
 	text-align: center;
 }
